--- a/index.html
+++ b/index.html
@@ -1,97 +1,155 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Open IT Tickets</title>
+  <meta charset="UTF-8">
+  <title>Open IT Helpdesk Tickets</title>
   <style>
     body {
-      background-color: #0e0e0e;
+      background-color: #121212;
+      color: #dcdcdc;
       font-family: Arial, sans-serif;
-      color: white;
-      margin: 2rem;
-    }
-    h2 {
-      color: #87cefa;
-      margin-top: 2rem;
-    }
-    .ticket-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
-      gap: 20px;
-    }
-    .ticket-card {
-      background-color: #1c1c1c;
-      border: 1px solid #333;
-      border-radius: 12px;
       padding: 20px;
-      transition: transform 0.2s, box-shadow 0.3s;
     }
-    .ticket-card:hover {
-      transform: translateY(-5px);
-      box-shadow: 0 0 10px rgba(0, 255, 255, 0.4);
-    }
-    .ticket-title {
-      color: #87cefa;
-      font-size: 1.1rem;
-      margin-bottom: 10px;
-      font-weight: bold;
-    }
-    .ticket-row {
-      margin: 5px 0;
-    }
-    .priority-high {
-      color: #ff4c4c;
-    }
-    .priority-medium {
-      color: #ffc107;
-    }
-    .priority-low {
-      color: #28a745;
-    }
-    .status-complete {
-      color: #9acd32;
-    }
-    .status-pending {
-      color: #ff8c00;
-    }
-    .complete-btn, .revert-btn, .change-priority-btn {
-      margin-top: 10px;
-      margin-right: 5px;
-      padding: 6px 12px;
-      border: none;
+
+    h1 {
       color: white;
+    }
+
+    .ticket {
+      background-color: #1e1e1e;
+      padding: 15px;
       border-radius: 8px;
-      cursor: pointer;
-      transition: background-color 0.3s;
+      margin: 10px 0;
     }
-    .complete-btn { background-color: #4caf50; }
-    .complete-btn:hover { background-color: #45a049; }
-    .revert-btn { background-color: #f44336; }
-    .revert-btn:hover { background-color: #d32f2f; }
-    .change-priority-btn { background-color: #2196f3; }
-    .change-priority-btn:hover { background-color: #1976d2; }
-    .description {
+
+    .high { border-left: 6px solid red; }
+    .medium { border-left: 6px solid orange; }
+    .low { border-left: 6px solid green; }
+    .update { border-left: 6px solid yellow; }
+    .complete { border-left: 6px solid lime; text-decoration: line-through; }
+
+    .buttons {
       margin-top: 10px;
-      font-style: italic;
-      color: #ccc;
     }
-    textarea {
-      width: 100%;
-      background: #2e2e2e;
+
+    button {
+      margin-right: 8px;
+      padding: 4px 8px;
+      background-color: #333;
       color: white;
       border: 1px solid #555;
-      border-radius: 6px;
+      border-radius: 4px;
+      cursor: pointer;
+    }
+
+    button:hover {
+      background-color: #555;
+    }
+
+    #new-ticket-input {
+      width: 70%;
       padding: 6px;
-      margin-top: 5px;
-      resize: vertical;
+      margin-right: 8px;
+    }
+
+    #add-ticket {
+      padding: 6px 12px;
     }
   </style>
 </head>
 <body>
-<!-- Content injected by script -->
-<script>
-  document.write("Paste the rest of your script logic and ticket data here.");
-</script>
+
+  <h1>🛠️ Open IT Helpdesk Tickets</h1>
+
+  <div>
+    <input type="text" id="new-ticket-input" placeholder="Describe the issue..." />
+    <button id="add-ticket">Add Ticket</button>
+  </div>
+
+  <div id="tickets"></div>
+
+  <script>
+    const ticketsEl = document.getElementById('tickets');
+    const inputEl = document.getElementById('new-ticket-input');
+    const addBtn = document.getElementById('add-ticket');
+
+    let tickets = JSON.parse(localStorage.getItem('tickets')) || [];
+
+    function saveTickets() {
+      localStorage.setItem('tickets', JSON.stringify(tickets));
+    }
+
+    function renderTickets() {
+      ticketsEl.innerHTML = '';
+      tickets.forEach((ticket, index) => {
+        const div = document.createElement('div');
+        div.className = `ticket ${ticket.status}`;
+        div.innerHTML = `
+          <strong>${getStatusEmoji(ticket.status)} ${ticket.text}</strong>
+          <div class="buttons">
+            ${ticket.status !== 'complete' ? `
+              <button onclick="changeStatus(${index})">Change Priority</button>
+              <button onclick="markComplete(${index})">Mark Complete</button>
+              <button onclick="markNeedsUpdate(${index})">Needs Update</button>
+            ` : `
+              <button onclick="reopenTicket(${index})">Reopen</button>
+            `}
+          </div>
+        `;
+        ticketsEl.appendChild(div);
+      });
+    }
+
+    function getStatusEmoji(status) {
+      switch (status) {
+        case 'high': return '🔥 High Priority';
+        case 'medium': return '⚠️ Medium Priority';
+        case 'low': return '🟢 Low Priority';
+        case 'update': return '🕒 Needs Update';
+        case 'complete': return '✅ Complete';
+        default: return '';
+      }
+    }
+
+    function addTicket() {
+      const text = inputEl.value.trim();
+      if (!text) return;
+      tickets.push({ text, status: 'high' });
+      inputEl.value = '';
+      saveTickets();
+      renderTickets();
+    }
+
+    function changeStatus(index) {
+      const order = ['high', 'medium', 'low'];
+      let current = tickets[index].status;
+      let next = order[(order.indexOf(current) + 1) % order.length];
+      tickets[index].status = next;
+      saveTickets();
+      renderTickets();
+    }
+
+    function markNeedsUpdate(index) {
+      tickets[index].status = 'update';
+      saveTickets();
+      renderTickets();
+    }
+
+    function markComplete(index) {
+      tickets[index].status = 'complete';
+      saveTickets();
+      renderTickets();
+    }
+
+    function reopenTicket(index) {
+      tickets[index].status = 'high';
+      saveTickets();
+      renderTickets();
+    }
+
+    addBtn.onclick = addTicket;
+    renderTickets();
+  </script>
+
 </body>
 </html>
